--- a/ui/options.scss
+++ b/ui/options.scss
@@ -26,12 +26,53 @@ $purple: #501D98;
       max-height: 100vh;
       width: 100vw;
       max-width: 100vw;
-      // background-color: #EEEEF6;
-      
+      background-color: $backgroundGrey;
+      .head {
+        height:58px;
+        line-height: 58px;
+        border-bottom: 2px solid $purple;
+        display: flex;
+        align-items: center;
+        .name {
+          color: $purple;
+          font-size: 18px;
+          margin-right: 112px;
+        }
+        .ref {
+          color:$purple;
+          flex-grow: 1;
+          text-align: right;
+          margin-right: 48px;
+          a {
+            text-decoration: none; 
+          }
+        }
+        // span {
+        //   vertical-align: middle;
+        // }
+        
+        img {
+          margin-left:48px;
+          // margin-top: 20px;
+          margin-right: 16px;
+          width: 24px;
+          height: 24px;
+        }
+      }
+      .title {
+        font-size: 18px;
+        padding-bottom: 8px;
+        line-height: 28px;
+        // color: #501D98;
+        // font-family: Saira;
+        &.light {
+          color: $veryLightPurple;
+        }
+      }
       .frames {
         color: #ffffff;
         background-color: $darkBlue;
-        padding: 0 25px;
+        padding: 8px;
         height: 100%;
         >.breadcrumbs {
           height: 50px;
@@ -41,6 +82,7 @@ $purple: #501D98;
           height: calc(100% - 50px);
           overflow-x: hidden;
           overflow-y: auto;
+          padding-right: 8px;
         }
         .tab {
           margin-bottom: 8px;
@@ -145,8 +187,8 @@ $purple: #501D98;
         overflow-x: hidden;
         overflow-y: scroll;
         max-height: calc(100% - 3.17em);
-        padding-left: 10px;
-        padding-right: 10px;
+        // padding-left: 10px;
+        // padding-right: 10px;
       }
 
       .listener,.message {
@@ -157,16 +199,25 @@ $purple: #501D98;
         flex-direction: column;
         width: 100%;
         height: 40px;
-        background: #FFFFFF;
+        
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-        border-radius: 8px;
+        
         margin-bottom: 10px;
         padding-left: 10px;
         padding-right: 10px;
         width: calc(100% - 10px);
+        border: 1px solid $purpleMedium;
+        box-sizing: border-box;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 4px;
         &.selected{
           background-color: $veryLightPurple;
           color: $frameHighlightColor;
+          background: $veryLightPurple;
+          border: 1px solid $purple;
+          box-sizing: border-box;
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+          border-radius: 4px;
         }
         text-overflow: ellipsis;
         overflow: hidden;
@@ -175,14 +226,21 @@ $purple: #501D98;
       }
 
       .actions{
-        background-color:#C4C4C4;
+        background-color:$darkBlue;
+        color: $veryLightPurple;
         height: 100%;
         width: 100%;
         padding: 10px;
+        border-top: 1px solid $purpleMedium;
+        .origins{
+          padding-bottom:  8px;
+        }
       }
       
       .message-buttons {
+        margin-top: 8px;
         display: flex;
+        
         justify-content: space-around;
         align-items: center;
         button {
@@ -197,15 +255,15 @@ $purple: #501D98;
 
       .mainContainer {
         margin: 0;
-        padding-left: $padd;
+        padding-left: 0;
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
         align-items: flex-start;
         height: 100%;
         max-height: 100%;
-        height: calc(100% - #{$padd});
-        max-height: calc(100% - #{$padd});
+        height: 100%;
+        max-height: 100%;
         width: 100vw;
         max-width: 100vw;
         overflow: hidden;
@@ -258,24 +316,10 @@ $purple: #501D98;
       // display: flex;
       display: block;
     }
-    .watermark {
-        display: block;
-        span {
-          z-index: 10;
-          position: absolute;
-          right: 5px;
-          bottom: 5px;
-          font-size: 11px;
-          background-color: #e8e8e8;
-          color: #44475a;
-          padding: 0 10px;
-          border-radius: 4px;
-        }
-      }
     
       .block {
         box-sizing: border-box;
-        border: 2px solid transparent;
+        // border: 2px solid transparent;
         height: 100%;
         width: 100%;
         // padding: $padd;
