show handler code in editor

--- a/ui/options.scss
+++ b/ui/options.scss
@@ -223,6 +223,7 @@ button {
       }
 
       .listener,.message {
+        cursor: pointer;
         outline: none;
         display: flex;
         justify-content: center;
