--- a/src/ui/main-page/main.scss
+++ b/src/ui/main-page/main.scss
@@ -1,78 +1,7 @@
+@import "../common.scss";
 
-$padd: 0px;
 
-$frameHighlightColor: #7B61FF;
-$darkBlue: #250D47;
-$veryLightPurple: #F3EBFE;
-$purpleMedium: #C5A4F8;
-$backgroundGrey: #EEEEF6;
-$purple: #501D98;
-
-  body {
-      font: 12px/normal 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
-      margin: 0;
-      padding: 0;
-      font-size: 13px;
-      -webkit-font-smoothing: antialiased;
-      overflow: hidden;
-    }
-  
-  input {
-    font-family:  'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
-  }
-  
-button {
-  cursor: pointer;
-}
-
-  #root {
-      height: 100vh;
-      max-height: 100vh;
-      width: 100vw;
-      max-width: 100vw;
-      background-color: $backgroundGrey;
-      .head {
-        height:58px;
-        line-height: 58px;
-        border-bottom: 2px solid $purple;
-        display: flex;
-        align-items: center;
-        .name {
-          color: $purple;
-          font-size: 18px;
-          margin-right: 112px;
-        }
-        .ref {
-          color:$purple;
-          flex-grow: 1;
-          text-align: right;
-          margin-right: 48px;
-          a {
-            text-decoration: none; 
-          }
-        }
-        // span {
-        //   vertical-align: middle;
-        // }
-        
-        img {
-          margin-left:48px;
-          // margin-top: 20px;
-          margin-right: 16px;
-          width: 24px;
-          height: 24px;
-        }
-      }
-      .title {
-        font-size: 18px;
-        padding-bottom: 8px;
-        line-height: 28px;
-        // color: #501D98;
-        // font-family: Saira;
-        &.light {
-          color: $veryLightPurple;
-        }
-      }
+      
       .frames {
         color: #ffffff;
         background-color: $darkBlue;
@@ -159,7 +88,6 @@ button {
               display: flex;
               background-color: $backgroundGrey;
               color: $darkBlue;
-              // $purpleMedium;
               justify-content: space-between;
               border: 2px solid;
               border-color: $purple;
@@ -171,7 +99,6 @@ button {
                 border-color: $purple;
                 border-radius: 5px;
               }
-              // align-items: center;
             }
           
             .order-2 .stats{
@@ -184,32 +111,9 @@ button {
             }
           }
 
-          // margin-right: 24px;
-          // border: 1px solid;
           &:not(:last-child) {
             margin-bottom: 8px;
           }
-          // display: none;
-          
-          // &.order-1 {
-          //   display: block;
-          //   border: 1px solid;
-          //   // height: 180px;
-          //   // min-width: 230px;
-          //   // max-width: 230px;
-          // }
-          
-          // &.order-2 {
-          //   display: block;
-          //   border: 1px solid;
-          //   height: 100px;
-          //   min-width: 130px;
-          //   max-width: 130px;
-          //   margin-bottom: 10px;
-          //   .stats {
-          //     flex-direction: column;
-          //   }
-          // }
         }
 
       }
@@ -218,8 +122,6 @@ button {
         overflow-x: hidden;
         overflow-y: scroll;
         max-height: calc(100% - 3.17em);
-        // padding-left: 10px;
-        // padding-right: 10px;
       }
 
       .listener,.message {
@@ -258,123 +160,60 @@ button {
       }
 
       .actions{
-        background-color:$darkBlue;
-        color: $veryLightPurple;
+        border-left: 2px solid $darkBlue;
         height: 100%;
         width: 100%;
         padding: 10px;
         border-top: 1px solid $purpleMedium;
         .origins{
+          .key-value{
+            &.clickable {
+              cursor: pointer;
+            }
+            margin-bottom: 4px;
+            display: flex;
+            .key {
+              font-weight: bold;
+              // width: 70px;
+              font-size: 0.9em;
+              margin-right: 8px;
+              color: $purpleMedium;
+            }
+            
+          }
           padding-bottom:  8px;
           max-width: calc(100% - 20px);
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
-          >div{
-            // display: inline-block;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+          .action {
+            padding-top: 16px;
+            border-bottom: 1px solid #C5A4F8;
+            padding-bottom: 4px;
+            margin-bottom: 4px;
+            user-select: none;
+          }
+          .buttons{
+            display: flex;
+            
+            flex-wrap: wrap;
+            >div{
+              cursor: pointer;
+              border: 1px solid $purpleMedium;
+              &:hover{
+                background-color: $purpleMedium;
+              }
+       
+              border-radius: 8px;
+              flex-grow: 1;
+              margin-right: 4px;
+              margin-bottom: 4px;
+              text-align: center;
+       
+              flex-grow: 0;
+              padding: 4px 4px;
+            }
+        
           }
         }
       }
-      
-      .message-buttons {
-        margin-top: 8px;
-        display: flex;
-        
-        justify-content: space-around;
-        align-items: center;
-        button {
-          border: none;
-          height: 40px;
-          width: 150px;
-          border-radius: 8px;
-          background: #FFFFFF;
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-        }
-      }
-
-      .mainContainer {
-        margin: 0;
-        padding-left: 0;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        align-items: flex-start;
-        height: 100%;
-        max-height: 100%;
-        height: 100%;
-        max-height: 100%;
-        width: 100vw;
-        max-width: 100vw;
-        overflow: hidden;
-        box-sizing: border-box;
-        .blockContainer{
-          display: flex;
-        }
-        .block{
-          flex-basis: 100%;
-          width: 100%;
-          max-height: 100%;
-          margin-right: $padd;
-          margin-top: $padd;
-        }
-      }
-    }
-    
-    ::-webkit-scrollbar-button {
-      display: none;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-      background-color: #c8c8c8;
-      border-radius: 8px;
-    }
-    
-    ::-webkit-scrollbar-track {
-      background-color: transparent;
-    }
-    
-    ::-webkit-scrollbar {
-      width: 10px;
-      height: 10px;
-      border-radius: 8px;
-    }
-  
-
-.layout {
-    margin: 0;
-    padding-left: $padd;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: flex-start;
-    height: calc(100% - #{$padd});
-    width: calc(100% - #{$padd});
-    overflow: hidden;
-    box-sizing: border-box;
-    >div {
-      // display: flex;
-      display: block;
-    }
-    
-      .block {
-        box-sizing: border-box;
-        // border: 2px solid transparent;
-        height: 100%;
-        width: 100%;
-        // padding: $padd;
-        // height: calc(100% - 8px);
-        // width: calc(100% - 8px);
-        
-        overflow: hidden;
-        position: relative;
-        .content {
-          z-index: 1;
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-        }
-    }
-  }
